sonar cloud code optimization

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,30 +12,41 @@ sonar.sources=.
 # Test directories
 sonar.tests=test
 
-# Exclusions für Analyse
-sonar.exclusions=src/data/**,test/**,.sonar/**
-
-# C/C++ compile commands
-sonar.cfamily.compile-commands=build/default/compile_commands.json
 
 # Issues nur für src und extern/qapla-engine-tester/src anzeigen
-sonar.issue.ignore.multicriteria=e1,e2,e3
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7
 
-# Exclude extern/** außer qapla-engine-tester/src
+# Exclude build/**
 sonar.issue.ignore.multicriteria.e1.ruleKey=*
-sonar.issue.ignore.multicriteria.e1.resourceKey=extern/**
+sonar.issue.ignore.multicriteria.e1.resourceKey=build/**
 
-# Include extern/qapla-engine-tester/src wieder
+# Exclude diagnostic-engine/**
 sonar.issue.ignore.multicriteria.e2.ruleKey=*
-sonar.issue.ignore.multicriteria.e2.resourceKey=extern/qapla-engine-tester/src/**
+sonar.issue.ignore.multicriteria.e2.resourceKey=diagnostic-engine/**
 
-# Exclude alle anderen Verzeichnisse außer src
+# Exclude .github/**
 sonar.issue.ignore.multicriteria.e3.ruleKey=*
-sonar.issue.ignore.multicriteria.e3.resourceKey=!src/**,!extern/qapla-engine-tester/src/**
+sonar.issue.ignore.multicriteria.e3.resourceKey=.github/**
+
+# Exclude extern/glad/**
+sonar.issue.ignore.multicriteria.e4.ruleKey=*
+sonar.issue.ignore.multicriteria.e4.resourceKey=extern/glad/**
+
+# Exclude extern/glfw/**
+sonar.issue.ignore.multicriteria.e5.ruleKey=*
+sonar.issue.ignore.multicriteria.e5.resourceKey=extern/glfw/**
+
+# Exclude extern/imgui/**
+sonar.issue.ignore.multicriteria.e6.ruleKey=*
+sonar.issue.ignore.multicriteria.e6.resourceKey=extern/imgui/**
+
+# Exclude extern/stb/**
+sonar.issue.ignore.multicriteria.e7.ruleKey=*
+sonar.issue.ignore.multicriteria.e7.resourceKey=extern/stb/**
 
 # Code Coverage & Analysis
-sonar.coverage.exclusions=**/data/**,extern/**,!extern/qapla-engine-tester/src/**
-sonar.cpd.exclusions=**/data/**,extern/**,!extern/qapla-engine-tester/src/**
+sonar.coverage.exclusions=**
+sonar.cpd.exclusions=**/data/**,build/**,diagnostic-engine/**,.github/**,extern/glad/**,extern/glfw/**,extern/imgui/**,extern/imgui/**,extern/stb/**
 
 # Source Encoding
 sonar.sourceEncoding=UTF-8
