- Windows file dialogs can no longer get to the background

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,7 @@ sonar.tests=test
 
 
 # Issues nur für src und extern/qapla-engine-tester/src anzeigen
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7,e8,e9
 
 # Exclude build/**
 sonar.issue.ignore.multicriteria.e1.ruleKey=*
@@ -43,6 +43,14 @@ sonar.issue.ignore.multicriteria.e6.resourceKey=extern/imgui/**
 # Exclude extern/stb/**
 sonar.issue.ignore.multicriteria.e7.ruleKey=*
 sonar.issue.ignore.multicriteria.e7.resourceKey=extern/stb/**
+
+# Exclude test/**
+sonar.issue.ignore.multicriteria.e8.ruleKey=*
+sonar.issue.ignore.multicriteria.e8.resourceKey=test/**
+
+# Exclude i18n
+sonar.issue.ignore.multicriteria.e9.ruleKey=*
+sonar.issue.ignore.multicriteria.e9.resourceKey=i18n/**
 
 # Code Coverage & Analysis
 sonar.coverage.exclusions=**
