Add Catch2 unit testing framework
Integrate Catch2 v3.5.4 as Git submodule for unit testing.

- Add extern/Catch2 submodule
- Update CMakeLists.txt with unit test target
- Configure Test Explorer settings for C++ TestMate
- Create test/unit directory structure
- Enable QAPLA_BUILD_UNIT_TESTS option (default: ON)

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "extern/imgui_test_engine"]
 	path = extern/imgui_test_engine
 	url = https://github.com/ocornut/imgui_test_engine.git
+[submodule "extern/Catch2"]
+	path = extern/Catch2
+	url = https://github.com/catchorg/Catch2.git
