Add Catch2 unit test infrastructure and engine creation tests
Integrate Catch2 unit testing alongside existing imgui_test_engine.
Add first unit test for engine creation using flexible test helpers.

- Update CMakeLists.txt: Unit tests in src/test-system/unit/
- Create engine-creation-test.cpp with 3 test sections
- Update qapla-engine-tester submodule with test helpers
- Remove unused imgui include from tournament-data.cpp
- Configure TestMate extension in VS Code settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,9 +185,9 @@ option(QAPLA_BUILD_UNIT_TESTS "Build unit tests with Catch2" ON)
 if(QAPLA_BUILD_UNIT_TESTS)
   add_subdirectory(extern/Catch2)
   
-  # Unit test sources
+  # Unit test sources for qapla-chess-gui and qapla-engine-tester
   file(GLOB_RECURSE UNIT_TEST_SOURCES CONFIGURE_DEPENDS
-    test/unit/*.cpp
+    src/test-system/unit/*.cpp
   )
   
   if(UNIT_TEST_SOURCES)
