Add Catch2 unit test infrastructure
- Add Catch2 v3.5.4 as Git submodule (extern/Catch2)
- Create unit test build preset in CMakePresets.json
- Exclude unit tests from main qapla build via GLOB filter
- Add QAPLA_BUILD_UNIT_TESTS CMake option (default ON)

Test helpers:
- unit-test-helpers.h: TestEngineParams for engine creation
- tournament-test-helpers.h: TournamentBuilder for test scenarios

Test suites (77 assertions total):
- engine-creation-test.cpp: Engine configuration tests
- tournament-gauntlet-test.cpp: Gauntlet tournament creation
- tournament-results-test.cpp: Game result management
- tournament-stability-test.cpp: Result persistence across changes

Test fixture:
- test-openings.pgn: Minimal PGN for tournament initialization

Build: cmake --build --preset unit
Run: build/default/unit-tests.exe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,8 @@ file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS
     src/*.c
     i18n/*.cpp
 )
+# Unit-Test-Dateien ausschließen (nur für unit-tests Target)
+list(FILTER PROJECT_SOURCES EXCLUDE REGEX ".*/test-system/unit/.*")
 
 # --------------------------------
 # Windows Icon Resource
